<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/welcome_to_infinity_chat_app"
        android:textAlignment="center"
        android:textColor="@color/textBackgroundWhite"
        android:textSize="18dp" />



    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/already_have_account"
        android:textColor="@color/textBackgroundWhite" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/start_login_btn"
        android:background="@color/textBackgroundWhite"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>